Case Studies page, spacing fix

--- a/src/components/Contentful/sass/sections/_case_studies.scss
+++ b/src/components/Contentful/sass/sections/_case_studies.scss
@@ -22,6 +22,7 @@
     .contentful-prose {
         background-color: $white;
         margin-top: -20px;
+        margin-bottom: 20px;
 
         .prose {
             padding: 50px;
